# sisyphus-auto-flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Install.md  Makefile  PLUGIN.md  README.md  pyproject.toml  rules
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: har-decomposer.md  scenario-planner.md  targeted-executor.md  test-reviewer.md  test-writer.md
.claude/hooks/: on_session_start.md
.claude/rules/: ASSERTIONS.md  COMMITS.md  CONVENTIONS.md  DATABASE.md  EXAMPLES.md  PATTERNS.md
.claude/scripts/: cleanup_trash.sh  generate_tests.sh  parse_har.sh  plan_har_workflow.sh  render_acceptance_summary.sh  sync_release_repos.sh
.claude/skills/har-to-testcase/: SKILL.md
.claude/skills/using-autoflow/: SKILL.md
.github/workflows/: ci.yml
agents/: case-reviewer.md  case-writer.md  har-parser.md  industry-researcher.md  project-scanner.md  repo-syncer.md  scenario-analyzer.md
api/: __init__.py
api/assets/: __init__.py  assets_api.py
api/metadata/: __init__.py  metadata_api.py
assets/: assertion-layers.drawio  workflow.drawio
config/: base.yaml  dev.yaml  prod.yaml  repositories.yaml  staging.yaml
docs/superpowers/plans/: 2026-04-08-init-flow-redesign.md  2026-04-13-task-visualization.md  (+4 more)
prompts/: assertion-layers.md  code-style-python.md  har-parse-rules.md  industry-assertions.md  review-checklist.md  scenario-enrich.md
prompts/code-style-python/: 00-core.md  10-api-class.md  10-api-enum.md  10-api-inline.md  20-client-custom.md  20-client-httpx.md  20-client-requests.md  30-assert-code-success.md  30-assert-status-only.md  40-test-structure-dtstack.md  40-test-structure-standard.md  50-env-config.md  55-runner-custom.md  60-auth-flow-detailed.md  _index.md
scripts/: cleanup_trash.sh  common.py  convention_scanner.py  har_parser.py  hooks.py  notifier.py  repo_sync.py  scaffold.py  self-update.sh  state_manager.py  test_runner.py
skills/autoflow/: SKILL.md
skills/tide/: SKILL.md
skills/using-autoflow/: SKILL.md
skills/using-tide/: SKILL.md
src/sisyphus_auto_flow/: __init__.py  cli.py
templates/: .env.example  autoflow-config.yaml.j2  conftest.py.j2  pyproject.toml.j2
testdata/: __init__.py
testdata/assets/: __init__.py  assets_crud_data.py
testdata/metadata/: __init__.py
tests/: __init__.py  conftest.py  test_convention_scanner.py  test_har_parser.py  test_integration_flow.py  test_integration_har_to_state.py  test_notifier.py  test_repo_sync.py  test_runner_wrapper.py  test_scaffold.py  test_state_manager.py
tests/architecture/: test_agent_workflow_contract.py  test_business_workspace_scaffolds.py  test_cli_parse_command.py  test_docs_path_references.py  test_harness_public_api.py  test_install_docs.py  test_live_api_gate.py  test_release_selection_contract.py
tests/assets/: conftest.py  test_assets_crud.py
tests/fixtures/: sample.har  sample_dirty.har  sample_enum_api.py  sample_repo_profiles.yaml  sample_response.json
tests/generator/: test_template_resolution.py
tests/metadata/: conftest.py
tests/orchestration/: test_acceptance_summary.py  test_har_workflow_planner.py  test_repo_sync.py  test_targeted_execution.py
tests/parsers/: test_custom_har_parser_regression.py  test_har_provider_contract.py  test_source_analyzer.py
tests/plugins/: test_contract_plugin.py  test_observability_plugin.py  test_replay_plugin.py
(+78 files in other folders)
